--- a/day 22/sanderdc - c#/Day22/Day22.csproj
+++ b/day 22/sanderdc - c#/Day22/Day22.csproj
@@ -16,4 +16,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    </ItemGroup>
+
 </Project>
