--- a/day 24/sanderdc - c#/Day24/Day24.csproj
+++ b/day 24/sanderdc - c#/Day24/Day24.csproj
@@ -17,6 +17,9 @@
       <None Update="testInput2.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="testInput3.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
